<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/decryption_bg"
    tools:context=".DecryptionActivity">

    <TextView
        android:id="@+id/level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/blinker_light"
        android:text="@string/technique"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <Button
        android:id="@+id/monoAlpha"
        android:layout_width="135dp"
        android:layout_height="54dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/med_button"
        android:onClick="openMonoAlphaDecryp"
        android:paddingLeft="7sp"
        android:paddingRight="7sp"
        android:text="@string/monoAplhabeticD"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/level"
        app:layout_constraintTop_toBottomOf="@+id/level" />

    <Button
        android:id="@+id/ceasar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/easy_button"
        android:onClick="openCeasarDecryp"
        android:text="@string/ceasarD"
        app:layout_constraintStart_toStartOf="@+id/level"
        app:layout_constraintTop_toBottomOf="@+id/level" />

    <Button
        android:id="@+id/rsa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        android:background="@drawable/hard_button"
        android:onClick="openHardDesc"
        android:text="@string/rsaD"
        app:layout_constraintEnd_toEndOf="@+id/level"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/level"
        app:layout_constraintTop_toBottomOf="@+id/level" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="147dp"
        android:layout_height="189dp"
        android:layout_marginTop="160dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/encyp_genie" />

    <TextView
        android:id="@+id/genie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/courier_prime"
        android:text="@string/Dgenie"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/level" />

</androidx.constraintlayout.widget.ConstraintLayout>