<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0.95"
    android:background="@drawable/encyp_activity_bg"

    tools:context=".EncryptionActivity">

    <TextView
        android:id="@+id/level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/blinker_light"
        android:text="@string/level"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/ceasar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/easy_button"
        android:onClick="openEasy"
        android:text="@string/easy"
        app:layout_constraintStart_toStartOf="@+id/level"
        app:layout_constraintTop_toBottomOf="@+id/level" />

    <Button
        android:id="@+id/monoAlpha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/med_button"
        android:onClick="openMedium"
        android:text="@string/med"
        app:layout_constraintEnd_toEndOf="@+id/level"
        app:layout_constraintTop_toBottomOf="@+id/level" />

    <Button
        android:id="@+id/rsa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="172dp"
        android:background="@drawable/hard_button"
        android:onClick="openHardDesc"
        android:text="@string/hard"
        app:layout_constraintEnd_toEndOf="@+id/level"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/level"
        app:layout_constraintTop_toBottomOf="@+id/level" />

    <TextView
        android:id="@+id/genie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/courier_prime"
        android:text="@string/Egenie"
        android:textColor="#FFFFFF"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="147dp"
        android:layout_height="189dp"
        android:layout_marginTop="160dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/encyp_genie" />

</androidx.constraintlayout.widget.ConstraintLayout>