<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_background"
    android:alpha="0.95"

    tools:context=".HardActivity">


    <TextView
        android:id="@+id/easyTextView"
        android:layout_width="265dp"
        android:layout_height="64dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/border"
        android:fontFamily="@font/hepta_slab_light"
        android:text="@string/rsa"
        android:textAlignment="center"
        android:textColor="#ABFFFFFF"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/enterTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/enterMsg"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/easyTextView"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/easyTextView"
        app:layout_constraintTop_toBottomOf="@+id/easyTextView" />

    <EditText
        android:id="@+id/inputMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/hintMsg"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#848282"
        app:layout_constraintEnd_toEndOf="@+id/enterTextView"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="@+id/enterTextView"
        app:layout_constraintTop_toBottomOf="@+id/enterTextView" />

    <TextView
        android:id="@+id/prime1"
        android:layout_width="101dp"
        android:layout_height="29dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="44dp"
        android:text="@string/prime1"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputMessage" />

    <TextView
        android:id="@+id/prime2"
        android:layout_width="101dp"
        android:layout_height="29dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="104dp"
        android:text="@string/prime2"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputMessage" />

    <EditText
        android:id="@+id/inputPrime1"
        android:layout_width="144dp"
        android:layout_height="45dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/prime"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#848282"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toEndOf="@+id/prime1"
        app:layout_constraintTop_toBottomOf="@+id/inputMessage" />

    <EditText
        android:id="@+id/inputPrime2"
        android:layout_width="140dp"
        android:layout_height="47dp"
        android:layout_marginTop="96dp"
        android:ems="10"
        android:hint="@string/prime"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#848282"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toEndOf="@+id/prime2"
        app:layout_constraintTop_toBottomOf="@+id/inputMessage" />

    <TextView
        android:id="@+id/easyResultView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/encyMsg"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/decrypt"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/decrypt"
        app:layout_constraintTop_toBottomOf="@+id/decrypt" />

    <Button
        android:id="@+id/decrypt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="248dp"
        android:background="@drawable/encrypt_button"
        android:text="@string/encrypt"
        app:layout_constraintEnd_toEndOf="@+id/inputMessage"
        app:layout_constraintStart_toStartOf="@+id/inputMessage"
        app:layout_constraintTop_toBottomOf="@+id/inputMessage"
        app:toggleCheckedStateOnClick="false" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="101dp"
        android:layout_height="29dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="172dp"
        android:text="@string/prime3"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputMessage" />

    <EditText
        android:id="@+id/inputPrime3"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:layout_marginTop="164dp"
        android:ems="10"
        android:hint="@string/prime"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="#848282"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/inputMessage" />

    <ScrollView
        android:layout_width="350dp"
        android:layout_height="90dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/easyResultView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/resultRsa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"

                android:textColor="#FFFFFF" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>